# libtorch_evaluate

./: .gitignore  README.md
basic_ops/: CMakeLists.txt
cpp_project/basic_ops/: CMakeLists.txt  README.md  torch_tensor.cpp  torch_tensor.hpp
cpp_project/dcgan/: CMakeLists.txt  README.md
dataset/ch02_samples/: FLIR_00001.txt  FLIR_00002.txt  FLIR_00003.txt  FLIR_00004.txt  FLIR_00005.txt  FLIR_00006.txt  alldata.txt
dcgan/: dcgan.cpp  dcgan.hpp
lenet/: CMakeLists.txt
notebook/: README.md  load_libtorch.hpp  macos_cling_workaround.hpp
notebook/CH00_Env-Setup/: CH00-install_and_test.ipynb
notebook/CH01_DL-Intro/: CH01-DL_intro.ipynb
notebook/CH02_Basic-OPs/: 0.libtorch_intro.ipynb  1.tensor_create.ipynb  2.tensor_algebra_ops.ipynb  2.tensor_ops.ipynb  3.tensor_autograd.ipynb  3.tensor_dive_into_source_code.ipynb  5.1.pytorch_dive_into_source_code.ipynb  5.import_dataset.ipynb  CH02-tensor_basic.ipynb  test.ipynb  x.1.pytorch_dive_into_source_code.ipynb
notebook/CH02_BasicOPs/: CH02-tensor_basic.ipynb
notebook/CH_APPENDIX_cplusplus/: 3-0.keyword_using.ipynb  README.md  template.ipynb
notebook/appx_cplusplus/: 3-0.keyword_using.ipynb  README.md
